# tol-lang

./: .gitignore  Cargo.toml  README.md  eng_grammar.txt  log
.github/workflows/: pages.yml
examples/: expression.tol  fibo.tol
playground/: Cargo.toml  index.html  loader.js  style.css
playground/src/: lib.rs
src/: compiler.rs  driver.rs  global_ctx.rs  lib.rs  main.rs  module.rs  prelude.rs
src/analyze/: mod.rs  symbol.rs
src/codegen/: bytecode_compiler.rs
src/parse/: lexer.rs  mod.rs
src/parse/ast/: expr.rs  mod.rs  stmt.rs
src/tol/: keywords.rs  mod.rs  operator.rs  token.rs  types.rs
src/tol/diagnostic/: miette_diagnostic.rs  mod.rs  runtime.rs
src/vm/: chunk.rs  function.rs  mod.rs  opcode.rs  value.rs
