[package]
name = "tol-lang"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["." , "playground"]
resolver = "3"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
miette = { version = "7.6.0", features = ["fancy"] }
phf = { version = "0.14.0", features = ["macros"] }
thiserror = "2.0.18"
